impl: postgres and typeorm

--- a/.gitignore
+++ b/.gitignore
@@ -154,4 +154,7 @@ dist
 # Serverless Webpack directories
 .webpack/
 
+### Pasta tmp ###
+tmp/
+
 # End of https://www.toptal.com/developers/gitignore/api/macos,node
