--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "bcryptjs": "^2.4.3",
     "csv-parse": "^4.16.3",
     "express": "^4.17.1",
     "multer": "^1.4.3",
@@ -19,6 +21,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
     "@types/multer": "^1.4.7",
     "@types/swagger-ui-express": "^4.1.3",
