--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.3",
+    "nodemailer": "^6.7.2",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
+    "supertest": "^6.2.1",
     "swagger-ui-express": "^4.1.6",
     "tsyringe": "^4.6.0",
     "typeorm": "^0.2.38",
-    "supertest": "^6.2.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
@@ -32,6 +33,7 @@
     "@types/jest": "^27.4.0",
     "@types/jsonwebtoken": "^8.5.5",
     "@types/multer": "^1.4.7",
+    "@types/nodemailer": "^6.4.4",
     "@types/supertest": "^2.0.11",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.1",
