--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
   },
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
+    "aws-sdk": "^2.1065.0",
     "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.5.1",
     "csv-parse": "^4.16.3",
     "dayjs": "^1.10.7",
+    "dotenv": "^14.3.2",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
+    "mime": "^3.0.0",
     "multer": "^1.4.3",
     "nodemailer": "^6.7.2",
     "pg": "^8.7.1",
@@ -33,6 +37,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.0",
     "@types/jsonwebtoken": "^8.5.5",
+    "@types/mime": "^2.0.3",
     "@types/multer": "^1.4.7",
     "@types/nodemailer": "^6.4.4",
     "@types/supertest": "^2.0.11",
