--- a/.gitignore
+++ b/.gitignore
@@ -159,6 +159,6 @@ tmp/*
 !tmp/.gitkeep
 
 ### ORMConfig ###
-ormconfig.json
+/ormconfig.json
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,node
