--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,12 @@ AWS_BUCKET_URL=
 AWS_REGION=
 
 ## Storage
-disk=s3
+disk=local
 
 ## Email
-MAIL_PROVIDER=ses
+MAIL_PROVIDER=local
+
+## Redis
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
