--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "seed:admin": "ts-node-dev src/shared/infra/typeorm/seed/admin.ts"
   },
   "dependencies": {
+    "@sentry/node": "^6.17.3",
+    "@sentry/tracing": "^6.17.3",
     "@types/bcrypt": "^5.0.0",
     "aws-sdk": "^2.1065.0",
     "bcryptjs": "^2.4.3",
